Fix styling on mobile

--- a/main.css
+++ b/main.css
@@ -5,7 +5,8 @@ body {
 img {
     margin-left: auto;
     margin-right: auto;
-    max-height: 600px;
+    max-width: 480px;
+    max-height: 480px;
     object-fit: scale-down;
 }
 
@@ -28,7 +29,8 @@ video {
     border: 1px solid #eee;
     border-left-width: .25rem;
     border-radius: .25rem;
-    border-left-color: #5bc0de
+    border-left-color: #5bc0de;
+    max-width: 480px;
 }
 
 .tip h4 {
